--- a/week5/Dockerfile
+++ b/week5/Dockerfile
@@ -12,4 +12,4 @@ COPY ["predict_flask.py", "./"]
 
 EXPOSE 9696
 
-ENTRYPOINT ["gunicorn", "--bind=0.0.0.0:9696", "predict_flask:app"]
+ENTRYPOINT ["waitress-serve", "--host=0.0.0.0", "--port=9696", "predict_flask:app"]
